--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "element-plus": "^2.7.4",
     "pinia": "^2.1.7",
+    "unplugin-element-plus": "^0.8.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -18,6 +21,9 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "sass": "^1.77.4",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8"
   }
 }
